course-tracker-spring-boot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-tracker-service
  labels:
    app: course-tracker-app
spec:
  selector:
    app: course-tracker-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
